# sp-sold2-vins

./: README.md  construct.drawio  evo_no_loop_1701934968595.txt
Trajactory/: evo.ipynb  evo_fast_no_loop.txt  evo_fast_plvins_loop.txt  tum_fast_no_loop.txt  tum_fast_plvins_loop.txt
Trajactory/Euroc_MH_03_medium/: evo_loop_1702970236487.csv  evo_loop_1704771027192.csv  evo_loop_1704964871812.csv  evo_no_loop_1701665995697.txt  evo_no_loop_1702970236457.txt  evo_no_loop_1704771027161.txt  evo_no_loop_1704964871784.txt  loop_1702018757845.csv  loop_1702019424960.csv  loop_1702970236487.csv  loop_1704713295502.csv  loop_1704771120345.csv  loop_1704771188362.csv  loop_1704787779070.csv  loop_1704789252302.csv  loop_1704964871812.csv  no_loop_1701665995697.txt  no_loop_1702018757705.txt  no_loop_1702019424914.txt  no_loop_1702970236457.txt  no_loop_1704713295483.txt  no_loop_1704771027161.txt  no_loop_1704771188332.txt  no_loop_1704787779033.txt  no_loop_1704789252271.txt  no_loop_1704964871784.txt
Trajactory/Euroc_MH_04_difficult/: evo_loop_1702956681344.csv  evo_loop_1704771894775.csv  evo_no_loop_1689747270396.txt  (+39 more)
camera_model/: CMakeLists.txt
config/: .gitignore  vins_rviz_config.rviz
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/config/: config copy.yaml  config.yaml
feature_tracker/launch/: feature_tracker.launch  featuremap.launch  line_tracker.launch  plfeature_tracker.launch  point_tracker.launch  postprocess.launch  test.launch
feature_tracker/msg/: Featuremap.msg
feature_tracker/scripts/: feature_tracker.py  feature_tracker_node.py  featuremap.py  featuremap_node.py  linefeature_tracker.py  linefeature_tracker_node.py  plfeature_tracker.py  plfeature_tracker_node.py  pointfeature_tracker.py  pointfeature_tracker_node.py  test.py
feature_tracker/scripts/img/: test.py
feature_tracker/scripts/utils/: PointTracker.py  base_model.py  camera_model.py
feature_tracker/scripts/utils_line/: my_line_model.py
feature_tracker/scripts/utils_line/LSD/: LSD.py  test.py
feature_tracker/scripts/utils_line/sold2/: line_matching.py  model.py
feature_tracker/scripts/utils_line/sold2/misc/: visualize_util.py
feature_tracker/scripts/utils_pl/: featuremap_model.py  line_detection copy.py  line_detection.py  metrics.py  model copy.py  model.py  model_bp.py  my_pl_model.py  vision_utils.py
feature_tracker/scripts/utils_point/: my_point_model.py
feature_tracker/scripts/utils_point/opencv_utils/: model.py
feature_tracker/scripts/utils_point/r2d2/: model.py
feature_tracker/scripts/utils_point/superglue/: model.py  superglue.py
feature_tracker/scripts/utils_point/superpoint/: model.py  trt_model.py
feature_tracker/src/: linefeature_tracker.cpp  linefeature_tracker_node.cpp  parameters.cpp  postprocess.cpp  postprocess.h  postprocess_node.cpp  postprocess_parameters.cpp  postprocess_parameters.h
feature_tracker/src/backup/: feature_tracker.h  feature_tracker_node.cpp  feature_tracker_node_origin.cpp
feature_tracker/src/backup/Eigen/: postprocess_node.cpp
feature_tracker/src/line_descriptor/: CMakeLists.txt
feature_tracker/src/origin/: feature_tracker.cpp  linefeature_tracker.cpp  linefeature_tracker.h  linefeature_tracker_node.cpp
feature_tracker/src/origin/Eigen/: postprocess.cpp
image_node_b/: CMakeLists.txt
notebook/: .gitignore  net_eva.ipynb  plot.ipynb  tensor_test.py  vision_utils.py
(+144 files in other folders)
